--- a/Styles/style.css
+++ b/Styles/style.css
@@ -105,6 +105,8 @@ h2{
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding-bottom: 115px;
+    background-color: rgb(245, 245, 245);
 }
 .taps{
     width: 30%;
@@ -144,4 +146,55 @@ h2{
 }
 #text-lab{
     padding-top: 59px;
+}
+#imgen{
+    padding-left: 63px;
+    padding-top: 85px;
+}
+.sub-sect{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-bottom: 164px;
+}
+#imgen-diseño{
+    filter: drop-shadow(0px 12px 17px rgb(88, 88, 88));
+}
+.text-sub{
+    width: 26%;
+    margin-top: 106px;
+}
+.color-hr-sub {
+    border-color: rgb(255, 139, 56);
+    border-width: 2px;
+    margin: 28px 0px 30px 0px;
+}
+h4{
+    font-size: 22px;
+}
+.list{
+    margin-top: 51px;
+    list-style: none;
+}
+.diseño {
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+    margin-bottom: 50px;
+}
+.diseño p{
+    color: gray;
+    width: 82%;
+}
+#p2{
+    width: 94%;
+}
+.standard-sect{
+    padding-top: 107px;
+    background-color: rgb(245, 245, 245);
+    display: flex;
+    justify-content: space-around;
+}
+.text-standard{
+    width: 50%;
 }
