--- a/Styles/style.css
+++ b/Styles/style.css
@@ -44,6 +44,9 @@ form{
     margin: 157px 0 139px 149px ;
     width: 50%;
 }
+.logo_info hr{
+    width: 66px;
+}
 h1{
     width: 52%;
     margin: 33px 0 39px;
@@ -62,22 +65,46 @@ h1{
     border: 2px solid white;
 }
 .formulario{
-    align-content: center;
-}
-form{
-    background-color: white;
-    color: black;
-    width: 361px;
-    height: 362px;
     display: flex;
-    justify-content: space-around;
-    padding:0 37px 0 39px;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+}
+.relleno{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 360px;
+}
+input{
+    margin: 36px 10px 33px 0;
+    width: 284px;
+    border:none;
+    border-bottom: 1px solid rgb(182, 182, 182);
+}
+.cabeza{
+    border-radius: 4px;
+    font-weight: 900;
+    text-align: center;
+    align-content: center;
+    font-variant-east-asian: full-width;
+    color: black;
+    width: 360px;
+    height: 53px;
+    background-color: rgb(245, 245, 245);
+}
+#get-btn{
+    background-color: rgb(255, 155, 81);
+    color: white;
+    border: none;
+    width: 360px;
+    height: 53px;
+    font-weight: bold;
+    border-radius: 4px;
 }
 span{
     color: rgb(255, 139, 56);
-}
-hr{
-    width: 66px;
 }
 h2{
     margin-bottom: 15px;
@@ -155,6 +182,7 @@ h2{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding-top: 126px;
     padding-bottom: 164px;
 }
 #imgen-diseño{
@@ -168,6 +196,13 @@ h2{
     border-color: rgb(255, 139, 56);
     border-width: 2px;
     margin: 28px 0px 30px 0px;
+    width: 66px;
+}
+.linea-sub{
+    width: 66px;
+    height: 2px;
+    margin: 28px 0 30px 0;
+    background-color: rgb(255, 139, 56);
 }
 h4{
     font-size: 22px;
@@ -183,7 +218,6 @@ h4{
     margin-bottom: 50px;
 }
 .diseño p{
-    color: gray;
     width: 82%;
 }
 #p2{
@@ -195,6 +229,258 @@ h4{
     display: flex;
     justify-content: space-around;
 }
+.image{
+    width: 28%;
+    padding-bottom: 129px;
+    filter: drop-shadow(0px 12px 17px rgb(88, 88, 88));
+}
 .text-standard{
-    width: 50%;
+    width: 29%;
+}
+h6{
+    font-size: 38px;
+    font-family: 'Cabrito Sans';
+    font-weight: 300;
+    padding: 108px 0 30px 0;
+}
+.awesome-padre{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.awesome-text{
+    padding-top: 108px;
+    text-align: center;
+}
+.awesome-text p{
+    padding-top: 30px;
+}
+.awesome-text div{
+    margin: auto;
+}
+.awsome-puntos{
+    display: flex;
+    align-items: center;
+    width: 67%;
+}
+
+.punto1,
+.punto2,
+.punto3{
+    padding: 83px 0 106px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+h5{
+    font-weight: bold;
+    font-size: 16px;
+}
+.color-p{
+    color: gray;
+}
+.p-awesome{
+    color: gray;
+    text-align: center;
+    width: 90%;
+}
+#espacio{
+    padding: 29px 0 32px;
+}
+.pricing-padre{
+    background-color: rgb(245, 245, 245);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+.pricing-options{
+    display: flex;
+    text-align: center;
+    align-items: flex-end;
+    gap: 40px;
+    padding-bottom: 94px;
+}
+.options1 hr{
+    border-color: gray;
+}
+.pricing-padre div{
+    margin: 0;
+}
+.pricing-options hr{
+    border-color: white;
+}
+.span-price{
+    color: white;
+    font-size: 65px;
+    font-weight: bolder;
+    font-family: monospace;
+}
+#span-0{
+    color: white;
+    font-size: 65px;
+    font-weight: bolder;
+    font-family: monospace;
+    position: relative;
+    bottom: 8px;
+}
+#span-9{
+    color: white;
+    position: relative;
+    top: 11px;
+}
+.back-color-pricing{
+    background-color: rgb(51, 51, 51);
+    color: white;
+    height: 58px;
+    align-content: center;
+}
+.linea1{
+    width: 100%;
+    height: 5px;
+    background-color: rgb(255, 139, 56);
+}
+.linea2{
+    width: 100%;
+    height: 40px;
+    background-color: rgb(255, 139, 56);
+    color: white;
+    font-weight: bolder;
+    align-content: center;
+}
+#text-princing{
+   color: gray; 
+   font-size: 11px;
+   font-style: oblique;
+   font-weight: 600;
+}
+#p-princing{
+    padding: 32px 0 84px 0;
+}
+.options1,
+.options2,
+.options3{
+    width: 342px;
+}
+.info-price{
+    background-color: rgb(255, 255, 255);
+}
+.espaciado-p{
+    padding: 14px 0 14px 0;
+    color: gray;
+}
+.custommers-padre{
+    display: flex;
+   align-items: center;
+   flex-direction: column;
+}
+.images-customers{
+    padding-top: 53px;
+    display: flex;
+    gap: 120px;
+}
+.text-customers{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.text-customers div{
+    margin: 0 0 32px 0;
+}
+.text-image {
+    width: 272px;
+    height: 131px;
+    background: #f5f5f5;
+    border-radius: 10px;
+    padding: 15px;
+    font-style: italic;
+    font-size: 14px;
+    color: #666;
+    position: relative;
+}
+.text-image::after {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 50px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid #f5f5f5;
+}
+.img-text{
+    width: 120px;
+    border-radius: 56px;
+}
+.person{
+    margin: 14px 0 100px 0;
+    display: flex;
+    align-items: center;
+}
+.text{
+    display: flex;
+    flex-direction: column;
+}
+.text-axure{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.text-axure div{
+    background-color: white;
+    margin: -5px 0 29px 0;
+}
+.axure-padre{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Assets/bg2.png");
+    background-position-x: center;
+    background-size: cover;
+}
+.axure-padre #btn-center{
+    margin: 33px 0 62px 0;
+    margin-top: 33px;
+}
+.contact-us{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.text-conctact{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.llenado-padre{
+    display: flex;
+    gap: 69px;
+}
+.llenado-izquierdo{
+    display: flex;
+    flex-direction: column;
+}
+.llenado-izquierdo input,
+.llenado-derecha input{
+    width: 527px;
+    border:none;
+    border-bottom: 1px solid gray;
+}
+.llenado-derecha{
+    display: flex;
+    align-items: flex-end;
+}
+footer{
+    padding: 21px 0 15px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    font-size: 13px;
+    color: rgb(163, 163, 163);
+    background-color: rgb(0, 0, 0);
 }
